[tool.poetry]
name = "Test application"
version = "0.1.0"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
packages = [{include = "my_tna_app"}]

[tool.poetry.dependencies]
python = "~3.11"
pendulum = "~2.1"
django = "~4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
